Refactor commandToRun.